welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: not found: value estSurbiscuit
	if(!estSurbiscuit){
            ^