welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet(){
	if(!estSurbiscuit){
		avance();
	} else {
		prendBiscuit();
	}

	
}
